Index form created

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <div></div>
     <div></div>
     <div></div>
+    <form>
+      <p><input name="username" type="text" placeholder="Enter your username here!"></p>
+      <p><input name="email" type="text" placeholder="Enter your email address"></p>
+      <p><input name="drink" type="checkbox" placeholder="Choose your drink.">
+      <!--radio buttons below are placeholders for images; images to be added after we make sure JS logic works-->
+      <p><input name="beer" type="radio" value="1">
+         <input name="wine" type="radio" value="2">
+         <input name="cocktail" type="radio" value="3">
+         <input name="tea" type="radio" value="4"></p>
+      <input type="submit">
+    </form>
     <script src="app.js"></script>
   </body>
 </html>
