added html scaffolding

--- a/about.html
+++ b/about.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Results</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header></header>
-    <div></div>
-    <div></div>
-    <div></div>
+    <header>
+      <img src=logoplaceholder/>
+      <a href="play.html">Game Home</a>
+      <a href="index.html">User Login</a>
+      <a href="about.html">Results</a>
+    </header>
+    <div>chart.js Results</div>
+    <div>Beer Buddies' Bios
+      <img src=Grayson/><p>bio</p>
+      <img src=Jade/><p>bio</p>
+      <img src=Keeley/><p>bio</p>
+      <img src=Morgan/><p>bio</p>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
