--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Beer Buddies</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src=placeholder/>
+      <a href="play.html">Game Home</a>
+      <a href="index.html">User Login</a>
+      <a href="about.html">Results</a>
+    </header>
     <div></div>
     <div></div>
     <div></div>
