--- a/play.html
+++ b/play.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Game Time</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header></header>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div id="questions">
+      <p></p>
+    </div>
+    <div id="answer1"></div>
+    <div id="answer2"></div>
+    <div id="answer3"></div>
+    <div id="answer4"></div>
+    <footer>
+      <img src="placeholder"/>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
