Generate answers and return correct

--- a/play.html
+++ b/play.html
@@ -9,10 +9,12 @@
     <div id="questions">
       <p></p>
     </div>
-    <div id="answer1"></div>
-    <div id="answer2"></div>
-    <div id="answer3"></div>
-    <div id="answer4"></div>
+    <div id="answers">
+      <div id="answer1"></div>
+      <div id="answer2"></div>
+      <div id="answer3"></div>
+      <div id="answer4"></div>
+    </div>
     <footer>
       <img src="placeholder"/>
     </footer>
