Rough logic to generate questions in the DOM and run through correct and incorrect (lines 43 - 151)

--- a/play.html
+++ b/play.html
@@ -9,12 +9,14 @@
     <div id="questions">
       <p></p>
     </div>
-    <div id="answers">
-      <div id="answer1"></div>
-      <div id="answer2"></div>
-      <div id="answer3"></div>
-      <div id="answer4"></div>
-    </div>
+    <main>
+      <div id="answers">
+        <div id="answer1"></div>
+        <div id="answer2"></div>
+        <div id="answer3"></div>
+        <div id="answer4"></div>
+      </div>
+    </main>
     <footer>
       <img src="placeholder"/>
     </footer>
