Closure question iteration completed

--- a/play.html
+++ b/play.html
@@ -17,6 +17,8 @@
         <div id="answer4"></div>
       </div>
     </main>
+    <input type="button" id="Captain Morgan" value="Morgan"/>
+    <input type="button" id="Keeley" value="Keeley"/>
     <footer>
       <img src="placeholder"/>
     </footer>
