added bio images and logo

--- a/about.html
+++ b/about.html
@@ -6,17 +6,34 @@
   </head>
   <body>
     <header>
-      <img src=logoplaceholder/>
+      <img src="images/beernerd.jpg"/>
       <a href="play.html">Game Home</a>
       <a href="index.html">User Login</a>
       <a href="about.html">Results</a>
     </header>
-    <div>chart.js Results</div>
-    <div>Beer Buddies' Bios
-      <img src=Grayson/><p>bio</p>
-      <img src=Jade/><p>bio</p>
-      <img src=Keeley/><p>bio</p>
-      <img src=Morgan/><p>bio</p>
+    <div></div>
+    <div>
+      <h1>Beer Buddies' Bios</h1>
+      <div id="grayson">
+        <img src="images/astro-cat.jpg"/>
+        <h3>Grayson</h3>
+        <p>When you see a Budweiser Select toward a Stella Artois, it means that another Ellis Island IPA toward a Kashmir IPA rejoices. Another hypnotic pool table somewhat befriends some plowed black velvet. An Avery IPA flies into a rage, because a monkey bite behind the bottle of beer wastedly sells a skinny bull ice to the Home brew. The whacked sake bomb avoids contact with a Hops Alligator Ale.</p>
+      </div>
+      <div id="jade">
+        <img src="images/afro-cat.jpg"/>
+        <h3>Jade</h3>
+        <p>When you see a Budweiser Select toward a Stella Artois, it means that another Ellis Island IPA toward a Kashmir IPA rejoices. Another hypnotic pool table somewhat befriends some plowed black velvet. An Avery IPA flies into a rage, because a monkey bite behind the bottle of beer wastedly sells a skinny bull ice to the Home brew. The whacked sake bomb avoids contact with a Hops Alligator Ale.</p>
+      </div>
+      <div id="keeley">
+        <img src="images/cool-cat.jpg"/>
+        <h3>Keeley</h3>
+        <p>When you see a Budweiser Select toward a Stella Artois, it means that another Ellis Island IPA toward a Kashmir IPA rejoices. Another hypnotic pool table somewhat befriends some plowed black velvet. An Avery IPA flies into a rage, because a monkey bite behind the bottle of beer wastedly sells a skinny bull ice to the Home brew. The whacked sake bomb avoids contact with a Hops Alligator Ale.</p>
+      </div>
+      <div id="morgan">
+        <img src="images/pirate.jpg"/>
+         <h3>Morgan</h3>
+        <p>When you see a Budweiser Select toward a Stella Artois, it means that another Ellis Island IPA toward a Kashmir IPA rejoices. Another hypnotic pool table somewhat befriends some plowed black velvet. An Avery IPA flies into a rage, because a monkey bite behind the bottle of beer wastedly sells a skinny bull ice to the Home brew. The whacked sake bomb avoids contact with a Hops Alligator Ale.</p>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
