--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     <header>
-      <img src=placeholder/>
+      <img src="images/beernerd.jpg"/>
+      <nav>
       <a href="index.html">User Login</a>
       <a href="about.html">Results</a>
+      </nav>
     </header>
     <div></div>
     <main>
