added background and text color

--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
   <body>
     <header>
       <img src="images/beernerd.jpg"/>
-      <a href="play.html">Game Home</a>
-      <a href="index.html">User Login</a>
+      <a href="index.html">Login</a>
       <a href="about.html">Results</a>
     </header>
     <div></div>
