--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <header>
       <img src="images/beernerd.jpg"/>
       <nav>
-      <a href="index.html">User Login</a>
-      <a href="about.html">Results</a>
+        <a href="index.html">Login</a>
+        <a href="about.html">Results</a>
       </nav>
     </header>
     <div></div>
