almost centered logo

--- a/play.html
+++ b/play.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header></header>
+    <header>
+      <header>
+      <img src="images/beernerd.jpg"/>
+    </header>
+    </header>
     <div id="questions">
       <p></p>
     </div>
@@ -17,10 +21,7 @@
         <div id="answer4"></div>
       </div>
     </main>
-    <input type="button" id="Captain Morgan" value="Morgan"/>
-    <input type="button" id="Keeley" value="Keeley"/>
     <footer>
-      <img src="placeholder"/>
     </footer>
     <script src="app.js"></script>
   </body>
