added hover function to answers

--- a/play.html
+++ b/play.html
@@ -8,14 +8,12 @@
     <header>
       <header>
       <img src="images/beernerd.jpg"/>
-    </header>
-    </header>
     <div id="questions">
       <p></p>
     </div>
     <main>
       <div id="answers">
-        <div id="answer1"></div>
+        <div id="answer1" class="grow"></div>
         <div id="answer2"></div>
         <div id="answer3"></div>
         <div id="answer4"></div>
