Random answers is working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <div></div>
     <main>
-      <form>
+      <form id="user-form">
         <p><input name="username" type="text" placeholder="Enter your username here!"></p>
         <p><input name="email" type="text" placeholder="Enter your email address"></p>
         <p><input name="drink" type="checkbox" placeholder="Choose your drink.">
