--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Beer Buddies</title>
+    <title>Beer Buddy</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
-      <img src="images/beernerd.jpg"/>
+      <img src="images/beer-outline.jpg"/>
       <nav>
         <a href="index.html">Login</a>
         <a href="about.html">Results</a>
