--- a/play.html
+++ b/play.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <header>
-      <img src="images/beernerd.jpg"/>
+      <img src="images/beer-outline.jpg"/>
     <div id="questions">
       <p></p>
     </div>
