changed logo on all pages

--- a/play.html
+++ b/play.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header>
-    <img src="images/beernerd.jpg" />
+     <img src="images/beer-outline.jpg"/>
   </header>
   <div id="questions">
     <p></p>
