--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="images/beernerd.jpg"/>
+       <img src="images/beer-outline.jpg"/>
       <a href="index.html">Login</a>
       <a href="about.html">Results</a>
     </header>
