added styling to all pages

--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div id="container">
     <header>
-       <img src="images/beer-outline.jpg"/>
-      <a href="index.html">Login</a>
-      <a href="about.html">Results</a>
+      <a href="index.html"> <img src="images/beer-outline.jpg"/></a>
+      <a href="about.html">About the Buddies</a>
     </header>
     <div></div>
     <div>
