--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div id="container">
     <header>
-      <img src="images/beer-outline.jpg"/>
-      <nav>
-        <a href="index.html">Login</a>
-        <a href="about.html">Results</a>
-      </nav>
+      <a href="index.html"> <img src="images/beer-outline.jpg"/></a>
+      <a href="about.html">About the Buddies</a>
     </header>
-    <div></div>
     <main>
+      <h1>Beer Buddy</h1>
+      <h3>Beer Buddy is a trivia drinking game. Choose an avatar. Choose a category. Answer questions. Any wrong answer will fill your glass in small increments. 
+      <h3>Losers must chug their beers.</h3>
+      <h3>Grab a real life drink and real life Buddy to play along!</h3>
       <form id="user-form">
-        <p><input name="username" type="text" placeholder="Enter your username here!"></p>
-        <p><input name="email" type="text" placeholder="Enter your email address"></p>
+        <p><input name="username" type="text" placeholder="Enter your Name here!"></p>
         <!--radio buttons below are placeholders for images; images to be added after we make sure JS logic works-->
-
         <input type="submit">
       </form>
+      <h2>Choose Your Avatar</h2>
     </main>
     <script src="app.js"></script>
+    </div>
   </body>
 </html>
