--- a/play.html
+++ b/play.html
@@ -5,8 +5,10 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <div id="container">
   <header>
-     <img src="images/beer-outline.jpg"/>
+      <a href="index.html"> <img src="images/beer-outline.jpg"/></a>
+      <a href="about.html">About the Buddies</a>
   </header>
   <div id="questions">
     <p></p>
@@ -26,5 +28,6 @@
   <footer>
   </footer>
   <script src="app.js"></script>
+  </div>
 </body>
 </html>
