added category page

--- a/about.html
+++ b/about.html
@@ -8,11 +8,20 @@
     <div id="container">
     <header>
       <a href="index.html"> <img src="images/beer-outline.jpg"/></a>
-      <a href="about.html">About the Buddies</a>
+      <a href="about.html" id="buddies">About the Buddies</a>
     </header>
-    <div></div>
+    <div id="results">
+      <span class="name1"></span>
+      <span class="points1"></span>
+      <span class="name2"></span>
+      <span class="points1"></span>
+      <span class="name3"></span>
+      <span class="points1"></span>
+      <span class="name4"></span>
+      <span class="points1"></span>
+    </div>
     <div>
-      <h1>Beer Buddies' Bios</h1>
+      <h3>Meet the Beer Buddies</h3>
       <div id="grayson">
         <img src="images/astro-cat.jpg"/>
         <h3>Grayson</h3>
@@ -35,5 +44,6 @@
       </div>
     </div>
     <script src="app.js"></script>
+    <footer><h5>&copy; Beer Buddy 2017</h5></footer>
   </body>
 </html>
