--- a/play.html
+++ b/play.html
@@ -8,7 +8,7 @@
   <div id="container">
   <header>
       <a href="index.html"> <img src="images/beer-outline.jpg"/></a>
-      <a href="about.html">About the Buddies</a>
+      <a href="about.html" id="buddies">About the Buddies</a>
   </header>
   <div id="questions">
     <p></p>
@@ -23,11 +23,15 @@
           <div id="answer4"></div>
         </div>
     </section>
-    <div id="response"></div>
+    <div id="avatars">
+        <img src="images/cocktail.png">
+        <img src="images/tea.png">
+        <img src="images/wine-glass.png">
+        <img src="images/beer-mug.png">
+    </main>
   </main>
-  <footer>
-  </footer>
   <script src="app.js"></script>
   </div>
+  <footer><h5>&copy; Beer Buddy 2017</h5></footer>
 </body>
 </html>
