Starting to store user data

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <h3>Losers must chug their beers.</h3>
       <h3>Grab a real life drink and real life Buddy to play along!</h3>
       <form id="user-form">
-        <p><input name="username" type="text" placeholder="Enter your Name here!"></p>
-        <!--radio buttons below are placeholders for images; images to be added after we make sure JS logic works-->
+        <input name="username" type="text" placeholder="Enter your Name here!">
         <input type="submit">
       </form>
       <h2>Choose Your Avatar</h2>
+      <button id="play">Start Game!</button> 
     </main>
-    <script src="app.js"></script>
+    <script src="user.js"></script>
     </div>
   </body>
 </html>
