Questions are being pulled! Local storage is working for questions, not yet for users

--- a/category.html
+++ b/category.html
@@ -15,7 +15,7 @@
       <div id="entertainment">Entertainment</div>
       <div id="sports">Sports</div>
     </main>
-    <script src="app.js"></script>
+    <script src="category.js"></script>
     <footer><h5>&copy; Beer Buddy 2017</h5></footer>
   </body>
 </html>
