--- a/play.html
+++ b/play.html
@@ -22,12 +22,13 @@
           <div id="answer4"></div>
         </div>
     </section>
+    <div id="response"></div>
     <div id="avatars">
         <img src="images/cocktail.png">
         <img src="images/tea.png">
         <img src="images/wine-glass.png">
         <img src="images/beer-mug.png">
-    </main>
+    </div>
   </main>
   <script src="app.js"></script>
   <footer><h5>&copy; Beer Buddy 2017</h5></footer>
