--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     </header>
     <main>
       <h1>Beer Buddy</h1>
-      <h3>Beer Buddy is a trivia drinking game. Choose an avatar. Choose a category. Answer questions. Any wrong answer will fill your glass in small increments. 
-      <h3>Losers chug.</h3>
-      <h3>And maybe grab a real life drink and real life Buddy to play along.</h3>
+      <h3>Beer Buddy is a trivia drinking game. Choose an avatar. Choose a category. Answer questions. Any wrong answer will fill your glass in small increments.</h3><br>
+      <h3>Losers chug.</h3><br>
+      <h3>And grab a real life drink and real life Buddy to play along.</h3>
       <form id="user-form">
         <input name="username" type="text" placeholder="Enter your Name here!">
         <input type="submit">
       </form>
       <h2>Choose Your Avatar</h2>
       <div id="avatars">
-        <img src="images/cocktail.png">
-        <img src="images/tea.png">
-        <img src="images/wine-glass.png">
-        <img src="images/beer-mug.png">
-      <button id="play">Start Game!</button> 
+        <img src="images/cocktail.png" id="cocktail">
+        <img src="images/tea.png" id="tea">
+        <img src="images/wine-glass.png" id="wine-glass">
+        <img src="images/beer-mug.png" id="beer-mug">
+      <div><button id="play">Start Game</button></div> 
     </main>
     <script src="user.js"></script>
     </div>
