Added user generated info; not yet working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <h3>And grab a real life drink and real life Buddy to play along.</h3>
       <form id="user-form">
         <input name="username" type="text" placeholder="Enter your Name here!">
+        <input name="avatar" type="radio" 
         <input type="submit">
       </form>
       <h2>Choose Your Avatar</h2>
