--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h3>Losers chug.</h3><br>
       <h3>And grab a real life drink and real life Buddy to play along.</h3>
       <form id="user-form">
-        <input name="username" type="text" placeholder="Enter your Name here!">
-        <input type="submit">
+        <input name="username" type="text" placeholder="Your Name Goes Here.   " id="username">
+        <input type="submit" id="submit">
       </form>
       <h2>Choose Your Avatar</h2>
       <div id="avatars">
