--- a/play.html
+++ b/play.html
@@ -29,7 +29,7 @@
         <img src="images/wine-glass.png">
         <img src="images/beer-mug.png">
     </div>
-    <section id="user-generated"><section>
+    <div id="users"><div>
   </main>
   <script src="app.js"></script>
   <footer><h5>&copy; Beer Buddy 2017</h5></footer>
