--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
       <h3>And grab a real life drink and real life Buddy to play along.</h3>
       <form id="user-form">
         <input name="username" type="text" placeholder="Enter your Name here!">
-        <input name="avatar" type="radio" 
+        <div id="avatars">
+          <input name="avatar" type="radio" id="cocktail" value="cocktail.png" />
+          <label for="cocktail"></label>
+          <input name="avatar" type="radio" id="tea" value="tea.png" />
+          <label for="tea"></label>
+          <input name="avatar" type="radio" id="wine-glass" value="wine-glass.png" />
+          <label for="wine-glass"></label>
+          <input name="avatar" type="radio" id="beer-mug" value="beer-mug.png" />
+          <label for="beer-mug"></label>
+        </div>
         <input type="submit">
       </form>
       <h2>Choose Your Avatar</h2>
-      <div id="avatars">
+      <!--<div id="avatars">
         <img src="images/cocktail.png" id="cocktail">
         <img src="images/tea.png" id="tea">
         <img src="images/wine-glass.png" id="wine-glass">
-        <img src="images/beer-mug.png" id="beer-mug">
+        <img src="images/beer-mug.png" id="beer-mug">-->
       <div><button id="play">Start Game</button></div> 
     </main>
     <script src="user.js"></script>
