Removed visible radio buttons and put header in new place

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h3>Losers chug.</h3><br>
       <h3>And grab a real life drink and real life Buddy to play along.</h3>
       <form id="user-form">
-
-        <input name="username" type="text" placeholder="Your Name Goes Here.   " id="username">
-        <div id="avatars">
+        <p><input name="username" type="text" placeholder="Your Name Goes Here.   " id="username"><p>
+        <h2>Choose Your Avatar</h2>
+        <p><div id="avatars">
           <input name="avatar" type="radio" id="cocktail" value="cocktail.png" />
           <label for="cocktail"></label>
           <input name="avatar" type="radio" id="tea" value="tea.png" />
@@ -26,17 +26,10 @@
           <label for="wine-glass"></label>
           <input name="avatar" type="radio" id="beer-mug" value="beer-mug.png" />
           <label for="beer-mug"></label>
-        </div>
-        <input type="submit" id="submit">
-
+        </div></p>
+        <p><input type="submit" id="submit"></p>
       </form>
-      <h2>Choose Your Avatar</h2>
-      <!--<div id="avatars">
-        <img src="images/cocktail.png" id="cocktail">
-        <img src="images/tea.png" id="tea">
-        <img src="images/wine-glass.png" id="wine-glass">
-        <img src="images/beer-mug.png" id="beer-mug">-->
-      <div><button id="play">Start Game</button></div> 
+      <div id="start"><button id="play">Start Game</button></div> 
     </main>
     <script src="user.js"></script>
     </div>
