added styling to categories page

--- a/category.html
+++ b/category.html
@@ -11,9 +11,9 @@
     </header>
     <main>
       <h1>Choose A Category</h1>
-      <div id="feminism">Feminism</div>
-      <div id="entertainment">Entertainment</div>
-      <div id="sports">Sports</div>
+      <div id="feminism"><p>Feminism</p></div>
+      <div id="entertainment"><p>Entertainment</p></div>
+      <div id="sports"><p>Sports</p></div>
     </main>
     <script src="category.js"></script>
     <footer><h5>&copy; Beer Buddy 2017</h5></footer>
