--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <input name="avatar" type="radio" id="beer-mug" value="beer-mug.png" />
           <label for="beer-mug"></label>
         </div></p>
-        <p><input type="submit" id="submit"></p>
+        <p><input type="submit" value="Submit Avatar" id="submit"></p>
       </form>
       <div id="start"><button id="play">Start Game</button></div> 
     </main>
